# bertina-api

./: LICENSE  Makefile  README.md  pyproject.toml
examples/: demo.py
src/bertina/: __init__.py  _base.py  _parsers.py  constants.py  exceptions.py
src/bertina/places/: __init__.py  client.py  models.py  parsers.py
src/bertina/radar/: __init__.py  client.py  models.py  parsers.py
src/bertina/search/: __init__.py  client.py  enums.py  models.py  parsers.py
src/bertina/translate/: __init__.py  client.py  languages.py  models.py
src/bertina/weather/: __init__.py  client.py  models.py
tests/: conftest.py
tests/places/: test_client.py  test_parsers.py
tests/places/fixtures/: category.html  city.html  detail.html  provinces.html
tests/radar/: test_client.py  test_parsers.py
tests/radar/fixtures/: radar.html
tests/search/: test_client.py  test_parsers.py
tests/search/fixtures/: images.html  news.html  places.html  scholar.html  shopping.html  videos.html  web.html
tests/translate/: test_client.py
tests/weather/: test_client.py
