[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bertina"
version = "0.1.0"
description = "Python SDK for the Bertina ecosystem — search, news radar, places, translation & weather."
requires-python = ">=3.10"
dependencies = [
    "curl_cffi>=0.7",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bertina"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
